Logical operators classes

--- a/recursos/css/exercicio.css
+++ b/recursos/css/exercicio.css
@@ -43,3 +43,12 @@ body.exercicio {
     border-bottom: 1px solid #999;
     margin-bottom: 20px;
 }
+
+p.divisao {
+    margin-bottom: 0px;
+    font-weight: bold;
+}
+
+hr {
+    margin-top: 0px;
+}
